force-app/src/objects/EmailMessage.object
<CustomObject>
    <fields>
        <fullName>TR1__AttachmentNames__c</fullName>
        <label>Attachment Names</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TR1__Contact_Document_Ids__c</fullName>
        <label>Shared Resumes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TR1__Template_Id__c</fullName>
        <description>Stores the identifier of Salesforce Email Template.</description>
        <inlineHelpText>Stores the identifier of Salesforce Email Template.</inlineHelpText>
        <label>Template Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Template_Name__c</fullName>
        <description>Stores the name of Salesforce Email Template.</description>
        <inlineHelpText>Stores the name of Salesforce Email Template (in format &lt;Folder Name&gt;: &lt;Email Template Name&gt;)</inlineHelpText>
        <label>Template Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Unique_Identifier__c</fullName>
        <description>If applicable, stores a unique identifier that is used instead of the Template Id.</description>
        <inlineHelpText>If applicable, stores a unique identifier that is used instead of the Template Id.</inlineHelpText>
        <label>Unique Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>